force-app/main/default/objects/Consulta__c/Consulta__c.object-meta.xml
<CustomObject>
    <label>Consulta</label>
    <nameField>
        <label>Nome de Consulta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>