force-app/main/default/objects/Consulta__c/fields/Data_da_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Consulta__c</fullName>
    <label>Data da Consulta</label>
    <required>true</required>
    <type>Date</type>
</CustomField>