force-app/main/default/objects/Consulta__c/fields/Dentista__c.field-meta.xml
<CustomField>
    <fullName>Dentista__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dentista</label>
    <referenceTo>Dentista__c</referenceTo>
    <relationshipLabel>Consultas</relationshipLabel>
    <relationshipName>Consultas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>