force-app/main/default/objects/Consulta__c/fields/Hora_da_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Hora_da_Consulta__c</fullName>
    <label>Hora da Consulta</label>
    <required>true</required>
    <type>Time</type>
</CustomField>