force-app/main/default/objects/Consulta__c/fields/Observa_es_da_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_da_Consulta__c</fullName>
    <label>Observações da Consulta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>