force-app/main/default/objects/Consulta__c/fields/Paciente__c.field-meta.xml
<CustomField>
    <fullName>Paciente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Paciente</label>
    <referenceTo>Paciente__c</referenceTo>
    <relationshipLabel>Consultas</relationshipLabel>
    <relationshipName>Consultas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>