force-app/main/default/objects/Consulta__c/fields/Status_da_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Consulta__c</fullName>
    <label>Status da Consulta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
                <default>true</default>
                <label>Agendada</label>
            </value>
            <value>
                <fullName>Confirmada</fullName>
            </value>
            <value>
                <fullName>Em atendimento</fullName>
            </value>
            <value>
                <fullName>Concluída</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Faltou</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>