force-app/main/default/objects/Consulta__c/fields/Tipo_de_Consulta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Consulta__c</fullName>
    <label>Tipo de Consulta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avaliação</fullName>
            </value>
            <value>
                <fullName>Limpeza</fullName>
            </value>
            <value>
                <fullName>Restauração</fullName>
            </value>
            <value>
                <fullName>Extração</fullName>
            </value>
            <value>
                <fullName>Canal</fullName>
            </value>
            <value>
                <fullName>Implante</fullName>
            </value>
            <value>
                <fullName>Ortodontia</fullName>
            </value>
            <value>
                <fullName>Retorno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>